Signed-off-by: pmgumble <pratikmgumble@gmail.com>

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -34,6 +34,18 @@
                                 </button>
                             </div>
                         </div>
+                        {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            {% for category, message in messages %}
+                                {% set message_class = 'is-success' %}
+
+                                {% if category == 'error' %}
+                                    {% set message_class = 'is-danger' %}
+                                {% endif %}
+                                <div class="notification {{ message_class }}">{{ message }}</div>
+                            {% endfor %}
+                        {% endif %}
+                        {% endwith %}
                     </form>
                 </div>
             </div>
@@ -60,6 +72,11 @@
                                         <br> {{ weather.description }}
                                     </p>
                                 </div>
+                            </div>
+                            <div class="media-right">
+                                <a href="{{ url_for('delete_city', name=weather.city) }}">
+                                    <button class="delete"></button>
+                                </a>
                             </div>
                         </article>
                     </div>
